[package]
name = "raqote-deno"
version = "0.1.0"
authors = ["DjDeveloperr <djdeveloperr@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
raqote = "0.8.0"
deno_core = "0.75.0"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
image = "0.23.12"
serde = { version = "1.0", features = ["derive"] }